# HeTangTTS

./: .gitignore  CLAUDE.md  app.py  build.sh  hetangtts.spec  main.py  pyproject.toml  updater.py  version.py  voice_analysis.csv
.github/workflows/: build.yml
backend/: api.py  audio_service.py  global_config.py  project_manager.py  tts_service.py
web-src/: package-lock.json  package.json  vite.config.ts
web-src/src/: App.tsx
web-src/src/components/: AudioSelectorModal.tsx  ContentList.tsx  ControlPanel.tsx  DubbingTable.tsx  FileImportModal.tsx  FileSelector.tsx  ProjectListPage.tsx  ProjectManager.tsx  ResultTable.tsx  RoleSidebar.tsx  ServerSettings.tsx  ServerSettingsModal.tsx  TaskProgress.tsx  TextImportModal.tsx  TextInput.tsx  Workspace.tsx
web-src/src/hooks/: usePyWebView.ts
web-src/src/types/: index.ts
